--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+*.log
+*.tmp
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
@@ -205,3 +207,4 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+mac_vendor_cache.json
